refactor(project): update api docs and booking ui
